# wing-generator

./: .gitignore  CMakeLists.txt
include/glad/: glad.c  glad.h
src/: airfoil.cpp  airfoil.h  main.cpp
